2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a "split" storage for keys

2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a factory for backends
	* Added a factory for storages

2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>

	* The service is working for BE users
	* Change priority for the service from 100 to 55
	* Added core patch to extras/ directory
	* Fix command line backend for openssl versions with different base64 syntax

2009-03-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Extension is generated and initial work is performed